<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.example.week3.result">

    <TextView
        android:id="@+id/txtTotalVal"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:gravity="left"
        android:textSize="24sp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/textCreditsVal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="39dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtTotal"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.8" />

    <TextView
        android:id="@+id/textCreditsVal"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginRight="8dp"
        android:gravity="left"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTermCostVal"
        app:layout_constraintLeft_toRightOf="@+id/textCredits"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.55"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtTermCostVal"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:gravity="left"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toRightOf="@+id/txtTermCost"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTermVal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtTermVal"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginRight="8dp"
        android:gravity="left"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtTerm"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        app:layout_constraintHorizontal_bias="0.555"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_totalCost"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTerm"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginLeft="35dp"
        android:gravity="right"
        android:text="@string/txt_term"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        android:layout_marginStart="35dp" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginLeft="35dp"
        android:gravity="right"
        android:text="@string/txt_sum"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/textCredits"
        android:layout_marginStart="35dp" />

    <TextView
        android:id="@+id/textCredits"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginLeft="35dp"
        android:gravity="right"
        android:text="@string/txt_credits"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTermCost"
        android:layout_marginStart="35dp" />

    <TextView
        android:id="@+id/txtTermCost"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="46dp"
        android:gravity="right"
        android:text="@string/txt_term_cost"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTerm"
        android:layout_marginStart="35dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BACK"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="37dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
